Финальный проект 6го спринта